--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -977,46 +977,47 @@ blockquote p {
 .api-js-heading {
   width: 100%;
   margin: 40px 0px 20px 0px;
+  border: 1px solid #EAEAEA;
 }
-/* line 615, ../sass/_components.scss */
+/* line 616, ../sass/_components.scss */
 .api-js-heading div.method {
-  padding: 15px 30px 15px 30px;
+  padding: 20px 30px 13px 30px;
   float: left;
   margin-right: 20px;
   font-weight: 600;
 }
 
-/* line 623, ../sass/_components.scss */
+/* line 624, ../sass/_components.scss */
 .object {
   background-color: #DFF5FF;
 }
 
-/* line 627, ../sass/_components.scss */
+/* line 628, ../sass/_components.scss */
 .post {
   background-color: #66CC66;
 }
 
-/* line 631, ../sass/_components.scss */
+/* line 632, ../sass/_components.scss */
 .put {
   background-color: #41C0FF;
 }
 
-/* line 635, ../sass/_components.scss */
+/* line 636, ../sass/_components.scss */
 .get {
   background-color: #FFCC00;
 }
 
-/* line 639, ../sass/_components.scss */
+/* line 640, ../sass/_components.scss */
 .function {
   background-color: #3399CC;
 }
 
-/* line 643, ../sass/_components.scss */
+/* line 644, ../sass/_components.scss */
 .delete {
   background-color: #ED4040;
 }
 
-/* line 647, ../sass/_components.scss */
+/* line 648, ../sass/_components.scss */
 .method-bullet {
   padding: 3px 5px 3px 5px;
   margin-top: -3px;
@@ -1025,9 +1026,18 @@ blockquote p {
   font-weight: 600;
 }
 
-/* line 655, ../sass/_components.scss */
+/* line 656, ../sass/_components.scss */
+.method-function {
+  padding: 1.5em;
+  line-height: 1em;
+}
+
+/* line 661, ../sass/_components.scss */
 .method-resource {
-  display: inherit;
-  border: 1px solid #EAEAEA;
-  padding: 15px 0px 19px 0px;
+  padding: 0px;
+}
+/* line 664, ../sass/_components.scss */
+.method-resource h4 {
+  margin-bottom: 1em;
+  line-height: 1em;
 }
